src/tests/code/fail/fail_variable_shadowing_variable_same_type.u
entrypoint:~()
{
	x:i64{42};
	
	if(x=42)
	{
		x:i64{43};
	}
}
->(x)